# texgen

./: .gitignore  CMakeLists.txt  README.md
res/: Test.tgs
src/: Main.cpp
src/TexGen/: File.cpp  File.h  Generator.cpp  Generator.h  IdentifierTokenData.h  Lexer.cpp  Lexer.h  Node.h  NodeType.h  NumberTokenData.h  OperationNode.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Texture.h  TextureNode.h  Token.h  TokenData.h  stb_image_write.cpp
src/TexGen/Operations/: AddBlend.cpp  AddBlend.h  ClearOperation.cpp  ClearOperation.h  HorizontalGradient.cpp  HorizontalGradient.h  MultiplyBlend.cpp  MultiplyBlend.h  NoiseOperation.cpp  NoiseOperation.h  Operation.h  OperationType.h  RadialGradient.cpp  RadialGradient.h  VerticalGradient.cpp  VerticalGradient.h
